--- a/INSTALL
+++ b/INSTALL
@@ -12,14 +12,13 @@ PyUnit
 Build with Autotools
 ====================
 1. Clone the repository
-2. Change to the directory
-3. Generate configuration files
-   autoreconf -i
+2. Change to the directory vpixels/
+3. Create directory `m4/`
 4. Download ax_cxx_compile_stdcxx.m4 and move it into directory m4/
    (https://www.gnu.org/software/autoconf-archive/ax_cxx_compile_stdcxx.html)
-5. Make a build directory
-   (e.g. mkdir _build)
-6. Change to the build directory
+5. Generate configuration files
+   autoreconf -i
+6. Make a build directory (e.g. mkdir _build) and change to it
 7. Configure the package
    ../configure
    (run ../configure --help for options)
@@ -32,12 +31,10 @@ Build with CMake
 ================
 1. Clone the repository
 2. Change to the directory
-3. Make a build directory
-   (e.g. mkdir _build)
-4. Change to the build directory
-5. Configure the package
+3. Make a build directory (e.g. mkdir _build) and change to it
+4. Configure the package
    (e.g. cmake .. -G "Unix Makefiles")
-6. Build the package
+5. Build the package
    make
-7. Run tests (optional)
+6. Run tests (optional)
    make check
