--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-0.1.3: Lua and Python wrapping code Optimization
-0.1.2: CMake build
-0.1.1: Encoder/decoder optimization
-0.0.11: bmp optimization
+0.6.5
+- Use README.md instead of README
+- Enhance image file importing of Lua and Python module
+- Put C++ examples in one directory: example/cpp/ 
+
+0.6.4
+- Initial release
